# Colab_Diploma

./: README.md
Classifier/: CL.py  Loss_Accuracy.py  deploy_infogain_v3.prototxt  deploy_infogain_v4.prototxt  deploy_infogain_v5.prototxt  deploy_infogain_v6.prototxt  infogain_H.binaryproto  parse_log.sh  solver_v3.prototxt  solver_v4.prototxt  solver_v5.prototxt  solver_v6.prototxt  solver_v6o.prototxt  solver_v8.prototxt  solver_v9.prototxt  train_infogain_v9.prototxt  train_val_infogain_v3.prototxt  train_val_infogain_v4.prototxt  train_val_infogain_v5.prototxt  train_val_infogain_v6.prototxt  train_val_infogain_v6o.prototxt  train_val_infogain_v8.prototxt_
Classifier/data/train/: Train_accuracy.txt  Train_iterations.txt  Train_loss.txt  train.csv
Classifier/data/val/: Val_acc.txt  Val_iterations.txt  Val_loss.txt  val.csv
Detector/: Detector.py  deploy.prototxt  log_d.txt  solver.prototxt  solver_v1.prototxt  test.prototxt  train.prototxt
IR_DataAugmentation/: CMakeLists.txt  ImageTransformer.cpp  ImageTransformer.h  main.cpp
